fixed description alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,6 +66,7 @@ html, body {
 .explanation {
   line-height: 20px;
   margin: 20px 0;
+  text-align: justify;
 }
 
 .pen {
